# pylogger2azblob

./: .env  .gitignore  README.md  README_pypi.md  pyproject.toml  requirements.txt  tutorial.py
.github/workflows/: publish-to-test-pypi.yaml  pytest_workflow.yaml
tests/: __init__.py
