[project]
name = "pylogger2azblob"
version = "0.0.1"
authors = [{name="Kazuya Onuki"}]
description = "a Python logging handler, BlobStorageTimedRotatingFileHandler, that extends the functionality of the built-in TimedRotatingFileHandler."
readme = "README.md"
requires-python = ">=3.12.0"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12"
]
keywords = ["azure", "blob", "logging"]
dependencies = [
    "azure-storage-blob==12.19.0",
    "azure-identity==1.15.0",
    "python-dotenv==1.0.0"
]
[project.optional-dependencies]  # only when development
dev = [
    "pytest==7.4.3",
    "build",
    "twine",
]
[project.urls]
"Homepage" = "https://github.com/KazuOnuki/pylogger2azblob"